聊天界面及数据交互逻辑

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,9 @@
         <activity
             android:launchMode="singleInstance"
             android:name=".view.activity.HomeActivity"/>
-        <activity android:name=".view.activity.MessageActivity"/>
+        <activity android:name=".view.activity.MessageActivity">
+
+        </activity>
     </application>
 
 </manifest>
