--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,19 +9,21 @@
         android:supportsRtl="true"
         android:name=".app.MyApplication"
         android:theme="@style/AppTheme">
+
         <activity android:name=".view.activity.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
             android:launchMode="singleInstance"
             android:name=".view.activity.HomeActivity"/>
-        <activity android:name=".view.activity.MessageActivity">
 
-        </activity>
+        <activity android:name=".view.activity.MessageActivity"/>
+        <activity android:name=".view.activity.SearchAvtivity"/>
+        <activity android:name=".view.activity.MoreActivity"/>
     </application>
 
 </manifest>
