--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,10 +30,11 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    compile project(':tipsview')
     compile 'com.android.support:appcompat-v7:24.0.0-alpha2'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha4'
     testCompile 'junit:junit:4.12'
-
+    compile 'in.srain.cube:ultra-ptr:1.0.11'
     compile 'com.orhanobut:logger:1.15'
     compile 'io.reactivex:rxjava:1.1.6'
     compile 'io.reactivex:rxandroid:1.2.1'
